--- a/blog/Templates/index.html
+++ b/blog/Templates/index.html
@@ -1,78 +1,152 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container-fluid ">
-        <div class="row my-2">
-            <div class="col">
-                <h2 >{{blog_title}}</h2>
-            </div>
-            <div class="col-3">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search..." aria-label="Search">
-                    <button class="btn btn-outline-light btn-primary " type="button" id="button-search">
-                      <i class="bi bi-search"></i> <!-- Bootstrap Icons -->
+<div class="container-fluid">
+    <div class="row my-2">
+        <div class="col">
+            <h2 class="text-primary">{{ blog_title }}</h2>
+        </div>
+        <div class="col-3">
+            <div class="input-group">
+                <form method="get" action="{% url 'blog:Index' %}" class="d-flex w-100">
+                    <input type="text" class="form-control" name="q" value="{{ search|default:'' }}" placeholder="Search..." aria-label="Search">
+                    <button class="btn btn-outline-light btn-primary" type="submit" id="search-button">
+                        <i class="bi bi-search"></i>
                     </button>
-                  </div>
+                </form>
             </div>
         </div>
-     <div class="row m-3">
+    </div>
+    <div class="row m-3">
         {% if page_obj %}
-        {% for post in page_obj %}
-            <div class="col-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img style = "height:300; width:300;" src="{{post.img_url}}" class="img-fluid" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <h5 class="card-title">{{post.title}}</h5>
-                                <p class="card-text">{{post.content|truncatechars:40}}</p>
-                                <div class="d-flex justify-content-between">
-                                     <a href="{% url 'blog:Details' slug=post.slug %}">Read More</a>
-                                    <a class="text-decoration-none text-dark fw-bold" href="#">{{post.category.name}}</a>
-                                </div>
+            {% for post in page_obj %}
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card shadow-sm">
+                        <img src="{{ post.img_url }}" class="card-img-top" alt="Post Image" style="height: 200px; object-fit: cover;">
+                        <div class="card-body">
+                            <h5 class="card-title text-primary">{{ post.title }}</h5>
+                            <p class="card-text text-secondary">{{ post.content|truncatechars:60 }}</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="{% url 'blog:Details' slug=post.slug %}" class="btn btn-sm btn-outline-primary">Read More</a>
+                                <a class="badge bg-secondary text-white text-decoration-none" href="#">{{ post.category.name }}</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             {% endfor %}
             <div class="col-12 my-3">
                 {% if page_obj.has_other_pages %}
-                <nav aria-label="Page navigation">
-                    <ul class="pagination">
-                        {% if page_obj.has_previous %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page=1" aria-label="First">
-                                <span aria-hidden="true">&laquo; first</span>
-                            </a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{page_obj.previous_page_number}}" aria-label="Previous">
-                                <span aria-hidden="true">previous</span>
-                            </a>
-                        </li>
-                        {%endif%}
-                        <li class="page-item"><span class="page-link">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</span></li>
-                        {%if page_obj.has_next%}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{page_obj.next_page_number}}" aria-label="Next">
-                                <span aria-hidden="true">next</span>
-                            </a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{page_obj.paginator.num_pages}}" aria-label="Last">
-                                <span aria-hidden="true">last &raquo;</span>
-                            </a>
-                        </li>
-                        {%endif%}
-                     </ul>
-                  </nav>
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination justify-content-center">
+                            {% if page_obj.has_previous %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page=1" aria-label="First">&laquo; first</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">previous</a>
+                                </li>
+                            {% endif %}
+                            <li class="page-item"><span class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span></li>
+                            {% if page_obj.has_next %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">next</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">last &raquo;</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
                 {% endif %}
-                
             </div>
         {% else %}
-            <p>No posts found 😊.</p>
+            <p class="text-center text-muted">No posts found 😊.</p>
         {% endif %}
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
+
+
+
+{% comment %} {% extends 'base.html' %}
+{% block content %}
+    <div class="container-fluid">
+        <div class="row my-2">
+            <div class="col">
+                <h2>{{ blog_title }}</h2>
+            </div>
+            <div class="col-3">
+                <div class="input-group">
+                    <form method="get" action="{% url 'blog:Index' %}" class="d-flex w-100">
+                        <input type="text" class="form-control" name="q" value="{{ search|default:'' }}" placeholder="Search..." aria-label="Search">
+                        <button class="btn btn-outline-light btn-primary" type="submit" id="search-button">
+                            <i class="bi bi-search"></i> <!-- Bootstrap Icons -->
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row m-3">
+            {% if page_obj %}
+                {% for post in page_obj %}
+                    <div class="col-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <img style="height:600px; width:300px;" src="{{ post.img_url }}" class="img-fluid" alt="Post Image">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <h5 class="card-title">{{ post.title }}</h5>
+                                        <p class="card-text">{{ post.content|truncatechars:60 }}</p>
+                                        <div class="d-flex justify-content-between">
+                                            <a href="{% url 'blog:Details' slug=post.slug %}">Read More</a>
+                                            <a class="text-decoration-none text-dark fw-bold" href="#">{{ post.category.name }}</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="col-12 my-3">
+                    {% if page_obj.has_other_pages %}
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination">
+                                {% if page_obj.has_previous %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page=1" aria-label="First">
+                                            <span aria-hidden="true">&laquo; first</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                                            <span aria-hidden="true">previous</span>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                <li class="page-item"><span class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span></li>
+                                {% if page_obj.has_next %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                                            <span aria-hidden="true">next</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">
+                                            <span aria-hidden="true">last &raquo;</span>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </nav>
+                    {% endif %}
+                </div>
+            {% else %}
+                <p>No posts found 😊.</p>
+            {% endif %}
+        </div>
+    </div>
+{% endblock %} {% endcomment %}
+
+
+
