--- a/blog/Templates/base.html
+++ b/blog/Templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{blog_title | default:"Blogs"}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'blog/style.css' %}">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> -->
 </head>
@@ -17,9 +18,9 @@
             </div>
             <div class="col">
                 <div class="d-flex justify-content-center gap-3">
-                    <a class="text-light text-decoration-none" href="">Home</a>
-                    <a class="text-light text-decoration-none" href="">About</a>
-                    <a class="text-light text-decoration-none" href="">Contact</a>
+                    <a class="text-light text-decoration-none" href="/blog">Home</a>
+                    <a class="text-light text-decoration-none" href="/blog/about">About</a>
+                    <a class="text-light text-decoration-none" href="/blog/contact">Contact</a>
                 </div>
             </div>
         </div>
