--- a/blog/Templates/detail.html
+++ b/blog/Templates/detail.html
@@ -1,26 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container-fluid ">
-       
-        <div class="row">
-            <div class="col-lg-8">
-              <h1 class="mb-4">{{post.title}}<small style="font-size:18px">({{post.category.name}})</small></h1>
-              <p class="text-muted">{{post.created_at|date:"F j,Y"}}</p>
-              <img src="{{post.img_url}}" class="img-fluid mb-4" alt="Blog Image">
-              <p>{{post.content}}</p>
-            </div>
-            <div class="col-lg-4">
-              <div class="card mt-3">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-8">
+            <h1 class="mb-4">
+                {{ post.title }}
+                <small style="font-size:18px">({{ post.category.name }})</small>
+            </h1>
+            <p class="text-muted">{{ post.created_at|date:"F j, Y" }}</p>
+            <img src="{{ post.img_url }}" class="img-fluid mb-4" alt="Blog Image">
+            <p>{{ post.content }}</p>
+        </div>
+        <div class="col-lg-4">
+            <div class="card mt-3">
                 <div class="card-body">
-                  <h5 class="card-title">Related Posts</h5>
-                  <ul class="list-unstyled">
-                    {% for related_post in related_posts %}
-                    <li><a href="{% url 'blog:Details' slug=related_post.slug %}">{{related_post.title}}</a></li>
-                      {% endfor %}
-                  </ul>
+                    <h5 class="card-title">Related Posts</h5>
+                    <ul class="list-unstyled">
+                        {% for related_post in related_posts %}
+                        <li>
+                            <a href="{% url 'blog:Details' slug=related_post.slug %}">{{ related_post.title }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
                 </div>
-              </div>
             </div>
         </div>
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
